Fix wrong placement of colored icons in article headings on small screens

--- a/_sass/entities/_box.scss
+++ b/_sass/entities/_box.scss
@@ -1,12 +1,12 @@
 .box {
 	display: inline-block;
-	border-radius: 3px;
 	color: rgba(#2E435F, .8);
 	text-align: center;
 	position: relative;
 
 	i {
 		position: relative;
+		line-height: inherit;
 		z-index: 3;
 	}
 
@@ -21,13 +21,13 @@
 	}
 
 	&::after {
-		top: -30px;
+		top: -5px;
 		right: -3px;
 		color: rgba(#5BA4FF, .5);
 	}
 
 	&::before {
-		bottom: -25px;
+		bottom: -5px;
 		left: -3px;
 		color: rgba(#FF6100, .5);
 	}
